# agent-context

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASE_NOTES.md  SKILL.md  pyproject.toml
.agent-context/current/: 00_START_HERE.md  10_SYSTEM_OVERVIEW.md  20_CODE_MAP.md  30_BEHAVIORAL_INVARIANTS.md  40_OPERATIONS_AND_RELEASE.md  acceptance_tests.md  completeness_contract.json  manifest.json  reporting_rules.json  routes.json  search_scope.json
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
agent_context/: __init__.py  cli.py  skill
docs/: SYNC.md  architecture.md  ci-adaptation.md  design-principles.md  getting-started.md  roadmap.md
docs/evidence/: metrics.md  results.md
scripts/: sync-from-canonical.sh
talk/: README.md  audience-presenter-devrel-review.md  claude-dev-day-jun-2026.html  cursor-meetup-may-2026.html  cursor-meetup-may-2026.md  index.html  render-pdf.sh  render-speaker-guide.py  slide-narratives.md  speaker-guide.html
templates/: 30_BEHAVIORAL_INVARIANTS.md  40_OPERATIONS_AND_RELEASE.md  acceptance_tests.md  completeness_contract.json  manifest.json  reporting_rules.json  search_scope.json
tests/: _helpers.py  test_cli_smoke.py  test_derived_metrics.py  test_extract_events.py  test_extract_events_codex.py  test_freshness.py  test_init_tiers.py  test_parse_ground_truth.py  test_result_schema.py  test_run_agent_lane_model.py  test_skill_sync.py  test_verifier_failures.py  test_verify.py  test_version_drift.py
tools/: check_freshness.sh  pre-push-hook.sh  verify_context_pack.py
(+57 files in other folders)
